tests/test_files/initialization_inference/move_whole_use_part.stderr
error: access to uninitialized path
- initialization_inference/move_whole_use_part:9:11
9 |   take_foo(bar.foo)
  |            ^^^^^^^
